@@ -1,3 +1,9 @@
+2002-03-21  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl (Debug): New debug menu item to load support for
+	remote inspection using dde or comm for use with tkinspect.	
+	* tkchat.tcl (addNewLines): Re-added the history size restriction.
+
 2002-03-20  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkchat.tcl: improved emoticon detection and simplified interface
